# matconvnet

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  Makefile.mex  Makefile.nvcc  README.md  cnn_cifar_init.m  cnn_cifar_init_nin.m  compile.m  exp_batchnorm.m  fast_conv.cu  gfully.m  gloss.m  grelu.m  gsoftmax.m  gvec.m  matconvnet.sln  matconvnet.vcxproj  matconvnet.vcxproj.filters  normalize.cpp  normalize.hpp  proc_synset.m  test_bilinear.m  test_conv.m  test_gconv.m  test_gconv_der.m  test_glayers.m  test_gpool.m  test_problem.m  test_tinynet_caffe.m  testder.m  tinynet.m
doc/: Makefile  blocks.tex  fundamentals.tex  geometry.tex  impl.tex  index.md  intro.tex  matconv.tex  matconvnet-manual.tex  matdoc.py  matdocparser.py  references.bib  template.html  vlnn.tex  wrappers.tex
doc/site/: mkdocs.yml
examples/: ParameterServer.m  cnn_cifar.m  cnn_cifar_init.m  cnn_cifar_init_nin.m  cnn_dagtrain.m  cnn_dagtrain_plotmcress.m  cnn_googlenet_evaluate.m  cnn_imagenet.m  cnn_imagenet2.m  cnn_imagenet_camdemo.m  cnn_imagenet_evaluate.m  cnn_imagenet_get_batch.m  cnn_imagenet_googlenet.m  cnn_imagenet_init.m  cnn_imagenet_init_bnorm.m  cnn_imagenet_mgpu.m  cnn_imagenet_minimal.m  cnn_imagenet_setup_data.m  cnn_mnist.m  cnn_mnist_dag.m  cnn_mnist_experiments.m  cnn_mnist_fc_bnorm.m  cnn_mnist_init.m  cnn_train.m  cnn_train2.m  cnn_train_autonn.m  cnn_train_dag.m  cnn_train_dah.m  cnn_train_mgpu.m  cnn_vgg_faces.m  exp_mnist_fc_bnorm.m  init_STN.m  solver_adadelta.m  solver_adagrad.m  solver_rmsprop.m  solver_sgd.m
examples/+solver/: adadelta.m  adagrad.m  rmsprop.m  sgd.m
examples/autonn/: cnn_imagenet_autonn.m  cnn_imagenet_init.m  cnn_imagenet_init_autonn.m  cnn_mnist_autonn.m  example_least_squares_autodiff.m  example_logistic_autodiff.m  example_rnn.m  (+2 more)
exp/: caffe_denormalize.m  caffe_normalize.m  cnn_cifar.m  cnn_imagenet.m  cnn_imagenet_evaluate.m  cnn_imagenet_get_batch.m  cnn_imagenet_minimal.m  cnn_imagenet_setup_data.m  cnn_imagenet_sync_labels.m  cnn_mnist.m  cnn_train.m  exp_sift_like.m  getDSIFTNet.m  imagenet.m  ogle.m
helpers/: caffe-import.py  evaluate_models.m  evaluate_ref_models.m  import-caffe.py  import-ref-models.sh
matconv.xcodeproj/: project.pbxproj
matconvnet.xcodeproj/: project.pbxproj
matlab/: GenericLayer.m  MultiClassErrorLayer.m  ParameterServer.m  addRNNLayer.m  functionSignatures.json  gfully.m  gsoftmax.m  gvec.m  hash_entropy_loss.m  tinynet.m  tinynet_move.m  vl_argparse.m  vl_argparsepos.m  vl_compilenn.m  vl_compilenn2.m  vl_contrib.m  vl_dagnn.m  vl_dagnn_getarcs.m  vl_dagnn_visualise.m  vl_gradclip.m  vl_imreadjpeg.m  vl_jaccardindex.m  vl_nnaffinegrid.m  vl_nnbilinearsampler.m  vl_nnbinaryop.m  vl_nnbnorm.m  vl_nnbnorm3.m  vl_nnbnorm4.m  vl_nnclip.m  vl_nncompile.m  vl_nnconcat.m  vl_nnconv.m  vl_nnconvt.m  vl_nncrop.m  vl_nndropout.m  vl_nnelu.m  vl_nneuclideanloss.m  vl_nnfull.m  vl_nngrubackward.m  vl_nngruforward.m  (+51 more)
scripts/: compile_matconvnet.m
src/: gconv.cu  gconv.m  gnormalize.cu  gpool.cu  mex_gpu_opts.sh
utils/: convert_matconvnet_caffe.m  evaluate_ref_models.m  export_caffe_model.m  export_simplenn2caffe.m  get-file.sh  googlenet_prototxt_patch.diff  import-caffe-dag.py  import-caffe-dag2.py  import-caffe.py  import-fast-rcnn.sh  import-fcn.sh  import-googlenet.sh  import-ref-models.sh  import-resnet.sh  layers.py  model2dot.m  preprocess-imagenet.sh  remove_bnorm.m  simplenn_caffe_compare.m  simplenn_caffe_deploy.m  simplenn_caffe_testdeploy.m  test_examples.m  tidy_ref_models.m
(+461 files in other folders)
